<resources>
    <string name="app_name">TimeKeepers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_job_management">Job Management</string>
    <string name="menu_accounting">Accounting</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_settings">Account &amp; Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_dashboard">Hello blank dashboard</string>
    <string name="hello_blank_accounting">Hello blank accounting</string>
    <string name="hello_blank_expenses">Hello blank expenses</string>
    <string name="hello_blank_calendar">Hello blank calendar</string>

    <!--Dashboard-->
    <string name="job_entries_label">Job Entries\n</string>
    <string name="expense_entries_label">Expenses\n</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="begin_break">Begin Break</string>
    <string name="end_break">End Break</string>

    <!--Job Management-->
    <string name="dialog_job_type_prompt">Select a job type:</string>
    <string name="hourly">Hourly</string>
    <string name="salary">Salary</string>
    <string name="project">Project</string>

    <!--Add Job Page-->
    <string name="job_details_label">Job Details</string>
    <string name="job_title">Job/Project Title</string>
    <string name="completed">Completed</string>
    <string name="pay_rate">Pay Rate</string>
    <string name="address_label">Address</string>
    <string name="address_first_line">Address Line 1</string>
    <string name="address_second_Line">Address Line 2</string>
    <string name="city_name">City</string>
    <string name="state_name">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="job_information_label">Job Contact Info</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="taxes_label">Taxes and Withholding\'s</string>
    <string name="federal_income">Federal Income Tax %</string>
    <string name="state_income">State Income Tax %</string>
    <string name="social_security">Social Security %</string>
    <string name="medicare">Medicare %</string>
    <string name="retirement">Individual Retirement %</string>
    <string name="other_withholdings">Other Withholding\'s %</string>
    <string name="salary_information_prompt">
        To provide the most accurate hourly accounting, please answer the following prompts:
    </string>
    <string name="salary_compensation">What is your annual salary?</string>
    <string name="salary_weekly_hours">What are your average weekly hours?</string>
    <string name="salary_annual_weeks_worked">How many weeks do you work in a year?</string>
    <string name="greater_than_0">Entry has to be greater than 0.</string>

    <!--Job Information Page-->
    <string name="job_completed">Job is Completed</string>
    <string name="job_incomplete">Job is Active</string>
    <string name="phone_label">Phone: </string>
    <string name="email_label">Email: </string>
    <string name="website_label">Website: </string>
    <string name="federal_tax_label">Federal Tax: </string>
    <string name="state_tax_label">State Tax: </string>
    <string name="social_security_label">Social Security: </string>
    <string name="medicare_label">Medicare: </string>
    <string name="retirement_label">Retirement: </string>
    <string name="other_withholdings_label">Other: </string>
    <!--Bundle Key's-->
    <string name="idKey">idKey</string>
    <string name="jobTitleKey">jobTitleKey</string>
    <string name="jobTypeKey">jobTypeKey</string>
    <string name="payRateKey">payRateKey</string>
    <string name="grossPayKey">grossPayKey</string>
    <string name="hoursWorkedKey">hoursWorkedKey</string>
    <string name="quantityJobEntriesKey">quantityJobEntriesKey</string>
    <string name="quantityExpenseEntriesKey">quantityExpenseEntriesKey</string>
    <string name="completedJobKey">completedJobKey</string>
    <string name="jobPhoneKey">jobPhoneKey</string>
    <string name="jobEmailKey">jobEmailKey</string>
    <string name="jobWebsiteKey">jobWebsiteKey</string>
    <string name="street1Key">street1Key</string>
    <string name="street2Key">street2Key</string>
    <string name="cityKey">cityKey</string>
    <string name="stateKey">stateKey</string>
    <string name="zipCodeKey">zipCodeKey</string>
    <string name="federalTaxKey">federalTaxKey</string>
    <string name="stateTaxKey">stateTaxKey</string>
    <string name="medicareKey">medicareKey</string>
    <string name="socialSecurityKey">socialSecurityKey</string>
    <string name="retirementKey">retirementKey</string>
    <string name="otherWithholdingsKey">otherWithholdingsKey</string>

    <!--Save and Cancel Buttons-->
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>

    <!--  Expenses  -->
    <!--  Add/Edit Expenses  -->
    <string name="expense_details_label">Expense Details</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="expense_category">Expense Category</string>
    <string name="date_label">Date</string>
    <string name="total_cost">Total Cost</string>
    <string name="receipt_label">Receipt</string>

    <!-- Calendar -->
    <string name="calendar_view">View</string>
    <!-- Job Entry View -->
    <string name="pay_label">Pay: \t</string>
    <string name="hours_worked_label">Hours Worked: \t</string>
    <string name="break_time_label">Break Time: </string>
    <string name="start_time_label">Start Time: \t</string>
    <string name="end_time_label">End Time: </string>
    <string name="notes_label">Notes: </string>
    <!--  Add/Edit Job Entry View  -->
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="break_time">Time on Beak (in hours)</string>
    <string name="select_time">Select</string>
    <string name="job_entry_note">Enter a Note Here…</string>
    <!--  Job Entry Bundle Key's (See also: Bundle Key's) -->
    <string name="jobEntryIdKey">jobEntryIdKey</string>
    <string name="startTimeKey">startTimeKey</string>
    <string name="endTimeKey">endTimeKey</string>
    <string name="breakTimeKey">breakTimeKey</string>
    <string name="notesKey">notesKey</string>
    <string name="payKey">payKey</string>

    <!--Login Activity-->
    <string name="logo_image_description">TimeKeepers Logo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Field is required</string>
    <string name="login_attempt_error">Email or Password Invalid… Try Again.</string>
    <string name="google_login_error">Google Authentication Failed</string>
    <string name="password_too_short">Password to short… Must be 6 characters.</string>
    <string name="password_contains">Passwords contain 1 uppercase, 1 lowercase,
        and 1 number</string>
    <string name="password_must_contain">Must contain 1 uppercase, 1 lowercase,
        and 1 number.</string>
    <string name="login_page_separator">Otherwise</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <!-- Buttons -->
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>

    <!--Registration Fragment-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="password_requirements">Password Must Contain: \n \u2022 1 Uppercase \n \u2022
        1 Lowercase \n \u2022 1 Number</string>
    <string name="valid_registration">Registration Successful</string>
    <string name="invalid_registration">Failed to Register</string>

    <!--Settings Fragment-->
    <string name="logout">Log Out</string>

    <!--Menu Options-->
    <string name="edit_entry">EDIT</string>
    <string name="delete_entry">DELETE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Firebase Firestore Key's-->


</resources>
