<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_navigation_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_job_management"
            android:icon="@drawable/ic_navigation_job_management"
            android:title="@string/menu_job_management" />
        <item
            android:id="@+id/nav_accounting"
            android:icon="@drawable/ic_navigation_accounting"
            android:title="@string/menu_accounting" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_navigation_expenses"
            android:title="@string/menu_expenses" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_navigation_calendar"
            android:title="@string/menu_calendar" />
    </group>

    <group>
        <item
            android:id="@+id/user_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"/>
    </group>

</menu>
