<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    tools:context=".JobManagement.CalculateSalaryDialog">

    <!--TODO: add styling to make the dialog look nicer...-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/salary_information_prompt"
        android:text="@string/salary_information_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/compensation_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/salary_information_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/compensation"
            android:hint="@string/salary_compensation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weekly_hours_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/compensation_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weekly_hours"
            android:hint="@string/salary_weekly_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/annual_weeks_worked_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/weekly_hours_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/annual_weeks_worked"
            android:hint="@string/salary_annual_weeks_worked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        app:layout_constraintTop_toBottomOf="@id/annual_weeks_worked_layout"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintTop_toTopOf="@id/cancel_button"
        app:layout_constraintBottom_toBottomOf="@id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>