<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".Calendar.AddJobEntry">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/job_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/FormHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RelativeLayout
        android:id="@+id/start_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/job_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/start_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            style="@style/FormLabels"
            android:maxLines="1"
            android:singleLine="true"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/start_time"
            android:hint="@string/select_time"
            style="@style/FormInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_time_label"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/end_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/start_time_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/end_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            style="@style/FormLabels"
            android:maxLines="1"
            android:singleLine="true"/>
        <TextView
            android:id="@+id/end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_time"
            style="@style/FormInfo"
            android:layout_below="@id/end_time_label"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/break_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/end_time_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/break_time"
            android:hint="@string/break_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/job_entry_note"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/break_time_layout"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:text="@string/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/save_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:text="@string/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancel_button"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</androidx.constraintlayout.widget.ConstraintLayout>