<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/address_label"
        android:text="@string/address_label"
        style="@style/FormLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/address_information_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address_label">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_first_line_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <AutoCompleteTextView
                android:id="@+id/address_first_line"
                android:hint="@string/address_first_line"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_second_line_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/address_first_line_layout">
            <AutoCompleteTextView
                android:id="@+id/address_second_line"
                android:hint="@string/address_second_Line"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_name_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/address_second_line_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/state_name_layout"
            app:layout_constraintHorizontal_weight="3">
            <AutoCompleteTextView
                android:id="@+id/city_name"
                android:hint="@string/city_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/state_name_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/address_second_line_layout"
            app:layout_constraintLeft_toRightOf="@id/city_name_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_weight="2">
            <AutoCompleteTextView
                android:id="@+id/state_name"
                android:hint="@string/state_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/zipcode_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/city_name_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.6">
            <AutoCompleteTextView
                android:id="@+id/zipcode"
                android:hint="@string/zipcode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>